# gimpsep-gump

./: CMakeLists.txt  inputHelper.cpp  inputHelper.h  main.cpp  record.cpp  record.h  transformations.cpp  transformations.h
